@@ -21,6 +21,7 @@ The rules for this file:
   * 2.0.0
 
 Fixes
+  * WaterBridgeAnalysis double counts the water (Issue #3119, PR #3120)
   * Fixed import of several `__all__` lists (PR #3013)
   * atommethods (_get_prev/next_residues_by_resid) returns empty residue group 
     when given empty residue group (Issue #3089)
